# pytmx

./: .gitignore  CONTRIBUTE.md  MANIFEST.in  README  changelog  changelog.md  demo.py  formosa.tmx  pyproject.toml  readme.md  requirements.txt  setup.cfg  setup.py  tmxloader.py  tmxloader3.py
.github/workflows/: test.yml
apps/: __init__.py  benchmark.py  benchmark_subtile.py  pygame_demo.py  pygame_sdl2_demo.py  pyglet_demo.py  pysdl2_demo.py  renderer.py  test.py  test_pygame.py  test_pyglet.py  test_pysdl2.py  viewer.py  zoom.py
apps/data/: acid.tsx  acid0.tmx  anchors.tmx  credits.md  desert.tmx  formosa-base64.tmx  iso.tmx  mapbig.tmx  mapbig1.tmx  tiles_spritesheet.tsx
apps/data/0.9.1/: TestMap.tmx  (+5 more)
docs/: Makefile  conf.py  contents.rst  index.rst  make.bat  pytmx.rst  requirements.txt
docs/source/: conf.py  index.rst  pytmx.contrib.rst  pytmx.rst
examples/: demo.py
interactive_tests/: test01.tmx  test_pytmx.py
pytmx/: __init__.py  dc.py  maputils.py  mason.py  mason_boneyard.py  mason_original.py  objects.py  pytmx-original.py  pytmx.py  pytmx_template.py  tmxloader.py  tmxloader3.py  util_pygame.py  util_pygame_sdl2.py  util_pyglet.py  util_pysdl2.py  utils.py
pytmx/contrib/: pygame_adapter.py  pyglet_adapter.py
pytmx3/: __init__.py  constants.py  pytmx.py  tmxloader.py  utils.py
tests/: README  benchmark.py  demo.py  demo3.py  desert.tmx  frnknstn.tmx  pytmx  test.py  test01.tmx  test2.py  test3.py  test_demo.py  test_pytmx.py  test_pytmx_old.py
tests/0.9.1/: formosa-base64.tmx
tests/pytmx/: test_pytmx.py
tests/resources/: test01.tmx
(+33 files in other folders)
