[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "PyTMX"
version = "3.32"
description = "Loads tiled tmx maps"
readme = "readme.md"
license = {file = "LICENSE"}
authors = [
    {name = "bitcraft", email = "leif.theden@gmail.com"}
]
classifiers = [
        "Intended Audience :: Developers",
        "Development Status :: 5 - Production/Stable",
        "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Topic :: Games/Entertainment",
        "Topic :: Multimedia :: Graphics",
        "Topic :: Software Development :: Libraries :: pygame",
]
requires-python = ">=3.9"

[project.urls]
source = "https://github.com/bitcraft/PyTMX"

[tool.setuptools]
packages = ["pytmx"]

[project.optional-dependencies]
pygame = ["pygame>=2.0.0"]
pygame-ce = ["pygame-ce>=2.1.3"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
line_length = 88
profile = "black"
skip_gitignore = true